--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Danny Tran - CV</title>
+  <title>Danny Tran - Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=<https://github.com/bnquatran/resume/raw/master/Danny_Tran_Resume_zGT.pdf>&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
